Configurado o STATIC, MEDIAS no settings e no URLS.  Criado a estrutura de templates para cada APP (CSS,JS,IMG). Adicionado um CSS para estilizar a aplicação e adicionado uma barra de navegação qualquer. Adicionado uma tabela para listar os vendedores e também a possibilidade de excluir, caso o gerente tenha necessidade.

--- a/construct/usuarios/templates/cadastrar_vendedor.html
+++ b/construct/usuarios/templates/cadastrar_vendedor.html
@@ -22,7 +22,31 @@
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
-        </form>  
+        </form> 
+        <hr class="bg-hr">
+
+        <table class="table table-striped table-dark table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Nome</th>
+              <th scope="col">Sobrenome</th>
+              <th scope="col">E-mail</th>
+              <th scope="col">Último login</th>
+              <th scope="col">Excluir</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for vendedor in vendedores %}
+            <tr>
+              <td>{{vendedor.first_name}}</td>
+              <td>{{vendedor.last_name}}</td>
+              <td>{{vendedor.email}}</td>
+              <td>{{vendedor.last_login}}</td>
+              <td><a href="{% url 'excluir_usuario' vendedor.id %}" role="button" class="btn btn-danger">Excluir Usuário</a></td>
+            </tr>
+            {% endfor %}
+          </tbody>    
+      </table>        
     </div>
   
 </div>
