--- a/construct/usuarios/templates/cadastrar_vendedor.html
+++ b/construct/usuarios/templates/cadastrar_vendedor.html
@@ -20,6 +20,16 @@
     <div class="my-4 px-3">
         <form action="{% url 'cadastrar_vendedor' %}" method="POST" name="">{% csrf_token %}
             <div class="mb-3">
+              <label for="exampleInputNome" class="form-label">Nome</label>
+              <input type="text" name="nome"class="form-control" id="exampleInputNome" aria-describedby="nomeHelp" placeholder="Digite seu nome">
+              <div id="nomeHelp" class="form-text">We'll never share your name with anyone else.</div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputSobrenome" class="form-label">Sobrenome</label>
+              <input type="text" name="sobrenome"class="form-control" id="exampleInputSobrenome" aria-describedby="sobrenomeHelp" placeholder="Digite seu sobrenome">
+              <div id="sobrenomeHelp" class="form-text">We'll never share your fullname with anyone else.</div>
+            </div>                    
+            <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
               <input type="email" name="email"class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Digite seu e-mail">
               <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
