--- a/construct/estoque/templates/adicionar_produto.html
+++ b/construct/estoque/templates/adicionar_produto.html
@@ -22,7 +22,7 @@
             <input type="file" name="imagens" multiple />
             <br/> <br/>
             <label>Nome do produto: </label>
-            <input type="text" name="nome" />            
+            <input type="text" name="nome_produto" />            
             <br/> <br/>
             <label>Selecione a categoria do produto: </label>
             <select name="categoria" >
@@ -32,13 +32,13 @@
             </select>     
             <br/> <br/>
             <label>Estoque inicial do produto: </label>
-            <input type="number" name="quantidade" />  
+            <input type="number" name="quantidade" min="1"  value="1"/>  
             <br/> <br/>
             <label>Preço de compra: </label>
-            <input type="number" name="preco_compra" />          
+            <input type="number" name="preco_compra" min="0" value="0" />          
             <br/> <br/>
             <label>Preço de venda: </label>
-            <input type="number" name="preco_venda" />                        
+            <input type="number" name="preco_venda" min="0" value="0"/>                        
             <br/> <br/>
             <input type="submit" />            
         </form>        
