--- a/construct/estoque/templates/adicionar_produto.html
+++ b/construct/estoque/templates/adicionar_produto.html
@@ -55,7 +55,36 @@
 
     </form>
     <hr style="background-color: gray;">
+    <form action="{% url 'adicionar_produto' %}" method="GET">
+        <div class="row">
+            <div class="col-md">
+                <input class="form-control" type="text" name="nome" placeholder="Nome do produto..." />
+            </div>
 
+            <div class="col-md">
+                <select class="form-control" name="categoria">
+                    <option value="">Todas as categorias</option>
+                    {% for categoria in categorias %}
+                        <option value="{{categoria.id}}">{{categoria.titulo}}</option>
+                    {% endfor %}                    
+                </select>
+            </div>
+
+            <div class="col-md">
+                <input class="form-control" type="number" name="preco_min" placeholder="Preço mínimo" />
+            </div>
+
+            <div class="col-md">
+                <input class="form-control" type="number" name="preco_max" placeholder="Preço máximo" />
+            </div>
+
+            <div class="col-md">
+                <input type="submit" value="Filtrar" class="btn btn-success" />                
+            </div>            
+        </div>        
+    </form>
+    <hr style="background-color: gray;">
+    <br />
     <div class="listar_produtos">
         <div class="row">
         {% for produto in produtos %}
